# 0.00.11 (45194) Oct 19, 2010
10/19/10 Deploying as 1st release candidate for v1.0
Added cloud representation to mass indicator
Added white backgrounds to the weigh scale and the charge meter.
Changed the colors used to portray mass to be black, and for the charge to be red when positive, blue when negative, and black when neutral.
Added a graph to the charge indicator node that allows side-by-side comparison of the charge balance.
Added a "Show Labels" checkbox
Moved the reset all button to the right hand side of the canvas instead of centered under the indicator windows
Fixed: Don't show the ion indicator when only electrons are present
# 0.00.10 (45068) Oct 14, 2010
10/14/10 Published to dev with changes requested in recent team meeting.
Removed the "atom" and "ion" text readouts from the charge indicator
Added an "ion" readout near to the atom.
Changed the order of particles in the particle count legend to have electrons at the top
Temporarily removed game tab
Removed phet logo from single
# 0.00.09 (44920) Oct 9, 2010
Made it so that the first electron in the outer shell is more visible
Changed the number of electrons in the bucket from 11 to 10
Made fuzzy electron shell graphic pickable if visible and if it contains any electrons
Added cloud view for electron shells
# 0.00.08 (44901) Oct 8, 2010
10/8/10 Publishing new version for review by team.
Removed duplicate copy of max/min buttons 
Increased the size of the atom icon on the scale
Integrated the graphics NP provided for the scale and for the charge indicator
Increased the font of "Atom" and "Ion" in the charge indicator
# 0.00.07 (44886) Oct 7, 2010
Aligned the right sides of the readout windows
Made "Unstable" text color black instead of red
# 0.00.06 (44883) Oct 7, 2010
Fixed: Window readouts do not re-maximize on reset all
Added a circular gradient paint to the charge indicator meter background