@@ -1,3 +1,4 @@
+Start with the symbol, mass and charge windows minimized
 # 0.00.11 (45194) Oct 19, 2010
 10/19/10 Deploying as 1st release candidate for v1.0
 Added cloud representation to mass indicator
